# coding-swarm

./: .gitignore  DOMAIN_SETUP_README.md  Makefile  PLUGIN_API.md  README.md  WEB_RESEARCH_INTEGRATION.md  WEB_RESEARCH_SECURITY.md  csanaa-switch-clean.sh  csanaa-switch.sh  cswarm-all.sh  cswarm-hotfix.sh  cswarm-project.sh  cswarm-repair.sh  cswarm-syscheck.sh  cswarm-upgrade.sh  deploy-finalize.sh  deploy.sh  docker-compose.web.yml  docker-compose.yml  enhancement_analysis.md  gg.sh  install-coding-swarm.sh  install-sanaa-premium.sh  nginx.conf  pyproject.toml  requirements.txt  sanaa-all.sh  sanaa-fix.sh  sanaa-stabilize.sh  setup_domain.sh  swarm_orchestrator.py  test_domain.sh  test_imports.py  test_llm_connection.py  test_web_ui.py  web_research_config.json
.github/workflows/: ci.yml
agents/: __init__.py  architect.py  base.py  coder.py  debugger.py  tester.py
agents/tools/: __init__.py
analysis/: indexer.py  query.py
api/: app.py  streaming.py
docs/modules/: README.md  advanced_orchestrator.md  enhanced_api.md  memory_optimization.md  performance_monitor.md  security.md
games/games/: package.json
orchestrator/: advanced_orchestrator.py  orchestrator.py
pgdata/base/1/: 2619  (+4 more)
pgdata/global/: 1260  1262  2671  2676  pg_control  pg_internal.init
pgdata/pg_stat/: pgstat.stat
plugins/: __init__.py  registry.json
prompts/: architect.txt
sanaa_env/: pyvenv.cfg
tests/: generator.py  test_orchestrator.py  test_plugins.py  test_provider.py
tools/: bootstrap.py
web/: app.py
web/templates/: base.html  dashboard.html  editor.html  index.html
(+3 files in other folders)
