[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "pytest-watch>=4.2.0",
  "mypy>=1.0.0",
  "ruff>=0.1.0",
  "black>=23.0.0",
  "build>=1.2.0",
  "uvicorn[standard]>=0.24.0",
]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
type-check = "mypy packages/"
lint = "ruff check packages/"
format = "black packages/"
format-check = "black --check packages/"
build-all = [
  "hatch -C packages/core build",
  "hatch -C packages/agents build",
  "hatch -C packages/orchestrator build",
  "hatch -C packages/plugins build",
  "hatch -C packages/api build",
  "hatch -C packages/cli build"
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "packages/core/src:packages/agents/src:packages/orchestrator/src:packages/plugins/src:packages/api/src:packages/cli/src"
